--- a/index.html
+++ b/index.html
@@ -235,8 +235,8 @@
 
         .documents-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(380px, 1fr));
-            gap: 2.5rem;
+            grid-template-columns: repeat(3, 1fr);
+            gap: 2rem;
             margin-bottom: 4rem;
         }
 
@@ -248,6 +248,9 @@
             transition: var(--transition);
             position: relative;
             border: 2px solid transparent;
+            height: 100%;
+            display: flex;
+            flex-direction: column;
         }
 
         .document-card:hover {
@@ -259,6 +262,9 @@
         .card-header {
             padding: 2.5rem 2rem 1.5rem;
             position: relative;
+            flex: 1;
+            display: flex;
+            flex-direction: column;
         }
 
         .card-icon {
@@ -293,6 +299,7 @@
         .card-features {
             list-style: none;
             margin-bottom: 2rem;
+            flex: 1;
         }
 
         .card-features li {
@@ -626,6 +633,19 @@
         }
 
         /* Responsive Design */
+        @media (max-width: 1200px) {
+            .documents-grid {
+                gap: 1.5rem;
+            }
+        }
+
+        @media (max-width: 992px) {
+            .documents-grid {
+                grid-template-columns: 1fr;
+                gap: 2rem;
+            }
+        }
+
         @media (max-width: 768px) {
             .hero-container {
                 padding: 0 1rem;
@@ -834,7 +854,7 @@
                         </div>
                         <h3 class="card-title">Federal Aid Research 2025</h3>
                         <p class="card-description">
-                            Discover untapped enrollment opportunities through comprehensive federal student aid analysis. This intelligence report reveals exactly where UAGC can capture market share in the changing financial aid landscape.
+                            Discover untapped enrollment opportunities through comprehensive federal student aid analysis. This intelligence report reveals exactly where UAGC can capture market share in the changing financial aid landscape with actionable insights.
                         </p>
                         
                         <ul class="card-features">
