🎨 BRAND ALIGNMENT: Three Pillars Section with Arizona Blue Background
🎯 UAGC BRAND INTEGRATION:
Updated the 'Three Pillars of UAGC's Digital Transformation' section to use the official UAGC Arizona Blue brand color as the background, creating stronger brand alignment and visual hierarchy.

🚀 BRAND COLOR IMPLEMENTATION:

BACKGROUND UPDATE:
✅ Changed from light-gray (#F8F9FA) to arizona-blue (#0C234B)
✅ Maintains brand consistency with UAGC color palette
✅ Creates professional, authoritative presentation
✅ Enhances visual impact of strategic documents section

TEXT COLOR OPTIMIZATION:
✅ Section title: Changed to white for optimal contrast
✅ Section subtitle: Updated to rgba(255, 255, 255, 0.9) for readability
✅ Maintains accessibility standards with proper contrast ratios
✅ Professional white text on blue background

BADGE ENHANCEMENT:
✅ Section badge: White background with arizona-blue text
✅ Creates visual pop and draws attention to 'Complete Strategic Suite'
✅ Inverted color scheme maintains brand consistency
✅ High contrast for improved readability

🎨 VISUAL HIERARCHY BENEFITS:

BRAND CONSISTENCY:
✅ Aligns with UAGC's official brand guidelines
✅ Uses primary brand color (Arizona Blue) for key section
✅ Creates stronger institutional identity throughout page
✅ Professional, university-appropriate color scheme

ENHANCED FOCUS:
✅ Blue background creates visual emphasis on strategic documents
✅ Draws attention to the core value proposition
✅ Separates Three Pillars from other sections effectively
✅ Creates premium, authoritative presentation

IMPROVED CONTRAST:
✅ White document cards pop against blue background
✅ Enhanced readability for section headers
✅ Professional color combination (blue + white)
✅ Maintains accessibility compliance

RESULT: The Three Pillars section now prominently features UAGC's Arizona Blue brand color, creating stronger brand alignment, enhanced visual hierarchy, and a more authoritative presentation of the strategic intelligence suite! 🎨🎯📊

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
         /* Documents Section */
         .documents-section {
             padding: 6rem 0;
-            background: var(--light-gray);
+            background: var(--arizona-blue);
         }
 
         .section-container {
@@ -219,6 +219,11 @@
             margin-bottom: 1rem;
         }
 
+        .documents-section .section-badge {
+            background: white;
+            color: var(--arizona-blue);
+        }
+
         .section-title {
             font-size: clamp(2rem, 4vw, 3rem);
             font-weight: 800;
@@ -226,11 +231,19 @@
             margin-bottom: 1rem;
         }
 
+        .documents-section .section-title {
+            color: white;
+        }
+
         .section-subtitle {
             font-size: 1.2rem;
             color: #666;
             max-width: 600px;
             margin: 0 auto;
+        }
+
+        .documents-section .section-subtitle {
+            color: rgba(255, 255, 255, 0.9);
         }
 
         .documents-grid {
