--- a/index.html
+++ b/index.html
@@ -160,30 +160,10 @@
             flex-direction: column;
             align-items: center;
             gap: 1rem;
+            margin-top: 2rem;
         }
 
-        .cta-button {
-            background: white;
-            color: var(--arizona-red);
-            padding: 1.25rem 3rem;
-            border: none;
-            border-radius: 50px;
-            font-size: 1.1rem;
-            font-weight: 700;
-            cursor: pointer;
-            transition: var(--transition);
-            text-decoration: none;
-            display: inline-flex;
-            align-items: center;
-            gap: 0.75rem;
-            box-shadow: var(--shadow-lg);
-        }
 
-        .cta-button:hover {
-            transform: translateY(-3px);
-            box-shadow: var(--shadow-xl);
-            background: #f8f9fa;
-        }
 
         .hero-security {
             font-size: 0.85rem;
@@ -680,10 +660,6 @@
                 </div>
 
                 <div class="hero-cta">
-                    <button onclick="showPasswordOverlay()" class="cta-button">
-                        <i class="fas fa-rocket"></i>
-                        Access Strategic Intelligence Suite
-                    </button>
                     <p class="hero-security">
                         <i class="fas fa-lock"></i> Secure • Confidential • Executive Access Only
                     </p>
