Fix: Updated Brand SERP Analysis with accurate data and improved typography contrast
- Enhanced Brand SERP Presence Analysis with verified data accuracy
- Added proper disclaimers and estimate indicators (~35%, ~45%, ~20%)
- Fixed card header gradient from blue-to-blue to blue-to-red for better contrast
- Removed forced text-primary color from typography system to prevent clashes
- Added text shadows for improved readability
- Timestamp added for data context (December 2024 analysis)

--- a/Reputation management/uagc-comprehensive-reputation-analysis.html
+++ b/Reputation management/uagc-comprehensive-reputation-analysis.html
@@ -4620,7 +4620,7 @@
                     
                     <div class="col-lg-4">
                         <div class="card border-0 bg-gradient" style="background: linear-gradient(135deg, var(--arizona-blue), var(--arizona-red));">
-                            <div class="card-body text-white text-center p-4">
+                            <div class="card-body text-center p-4">
                                 <h5 class="card-title fw-bold mb-3">Overall Reputation Score</h5>
                                 <div class="display-3 fw-bold mb-2">2.1/5</div>
                                 <p class="mb-3">Based on comprehensive multi-source analysis</p>
