Add User Experience & Personalization Framework to index
- Added fourth document card for UAGC cookie personalization framework
- Features 25% RFI increase through intelligent user journey optimization
- Includes UTM tracking, cookie-based personalization, and GDPR compliance
- Updated strategic integration section to include conversion optimization
- Complete 4-component strategic framework: Foundation → Opportunity → Protection → Conversion

--- a/index.html
+++ b/index.html
@@ -860,6 +860,46 @@
                         </button>
                     </div>
                 </div>
+
+                <!-- User Experience & Personalization -->
+                <div class="document-card">
+                    <div class="card-header">
+                        <div class="card-icon" style="background: linear-gradient(135deg, var(--highlight-orange), var(--arizona-red));">
+                            <i class="fas fa-user-cog"></i>
+                        </div>
+                        <h3 class="card-title">User Experience & Personalization</h3>
+                        <p class="card-description">
+                            Transform every website visitor into a personalized experience that drives enrollment. Complete framework for cookie-based personalization, UTM tracking, and intelligent user journey optimization to increase RFI submissions by 20-25%.
+                        </p>
+                        
+                        <ul class="card-features">
+                            <li><span class="icon"><i class="fas fa-check"></i></span> Complete UTM framework and attribution strategy</li>
+                            <li><span class="icon"><i class="fas fa-check"></i></span> Cookie-based personalization engine implementation</li>
+                            <li><span class="icon"><i class="fas fa-check"></i></span> GDPR/CCPA compliant privacy framework</li>
+                            <li><span class="icon"><i class="fas fa-check"></i></span> Interactive demo with real-time personalization</li>
+                            <li><span class="icon"><i class="fas fa-check"></i></span> Technical implementation roadmap</li>
+                        </ul>
+
+                        <div class="card-stats">
+                            <div class="card-stat">
+                                <span class="card-stat-number">25%</span>
+                                <span class="card-stat-label">RFI Increase</span>
+                            </div>
+                            <div class="card-stat">
+                                <span class="card-stat-number">9,751</span>
+                                <span class="card-stat-label">Lines Framework</span>
+                            </div>
+                            <div class="card-stat">
+                                <span class="card-stat-number">100%</span>
+                                <span class="card-stat-label">Compliance</span>
+                            </div>
+                        </div>
+
+                        <button onclick="openDocument('user experience - personalization /UAGC-cookie-personalization.html')" class="card-button" style="background: linear-gradient(135deg, var(--highlight-orange), var(--arizona-red)); color: white;">
+                            <i class="fas fa-cogs"></i> View UX Framework
+                        </button>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
@@ -869,9 +909,9 @@
         <div class="section-container">
             <div class="section-header">
                 <div class="section-badge">Strategic Integration</div>
-                <h2 class="section-title">How These Three Strategies Work Together</h2>
+                <h2 class="section-title">How These Four Strategies Work Together</h2>
                 <p class="section-subtitle">
-                    This isn't just three separate documents. It's a carefully orchestrated strategic framework where each component amplifies the others for maximum impact.
+                    This isn't just four separate documents. It's a carefully orchestrated strategic framework where each component amplifies the others for maximum enrollment impact.
                 </p>
             </div>
 
@@ -892,6 +932,12 @@
                     <div class="step-number">3</div>
                     <h4 class="step-title">Protection</h4>
                     <p class="step-description">Reputation management ensures brand integrity throughout the transformation process</p>
+                </div>
+                
+                <div class="integration-step">
+                    <div class="step-number">4</div>
+                    <h4 class="step-title">Conversion</h4>
+                    <p class="step-description">Personalization framework converts visitors into qualified leads through intelligent user experience optimization</p>
                 </div>
             </div>
         </div>
