Force GitHub Pages rebuild: Deploy Four Pillars Framework
• Cache-busting update to ensure GitHub Pages displays latest version
• Local version correctly shows 4 strategic pillars but live site shows old 3-pillar version
• This commit should trigger proper deployment of the updated index.html
• Includes: SEO Audit + Federal Aid + Reputation + User Experience Personalization

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UAGC Strategic Intelligence Suite - Complete Digital Transformation</title>
+    <!-- Cache busting update: Four Pillars Framework deployed -->
     <meta name="description" content="Access UAGC's comprehensive strategic intelligence suite: SEO audit for 40-60% growth, federal aid research, and reputation recovery. Transform enrollment challenges into sustainable growth.">
     
     <!-- Fonts & Icons -->
