COMPLETE GitHub Pages Refresh: Force Deploy Four Pillars + Animations
🔄 FORCED COMPLETE REFRESH:
• Added version metadata and timestamps to force GitHub Pages rebuild
• Local version has: Four Pillars Framework + Intensified Animations
• GitHub Pages should display: SEO + Federal Aid + Reputation + User Experience
• This commit forces complete cache invalidation and fresh deployment

✅ What should now be visible on live site:
• Four Pillars of UAGC's Digital Transformation (not three)
• User Experience & Personalization card (fourth component)
• 4-step Strategic Integration framework ending with 'Conversion'
• Intensified hero animations with dramatic effects
• Enhanced stat cards with flip/rotate animations
• Continuous glow and wave effects throughout hero section

🎯 Target: https://omac049.github.io/UAGC-SEO/index.html
📅 Timestamp: December 27, 2024 - Complete Refresh

--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UAGC Strategic Intelligence Suite - Complete Digital Transformation</title>
-    <!-- Cache busting update: Four Pillars Framework deployed -->
+    <!-- COMPLETE REFRESH: Four Pillars + Intensified Animations - GitHub Pages Update -->
+    <meta name="version" content="2.0-complete-refresh">
+    <meta name="last-updated" content="2024-12-27-intense-animations">
     <meta name="description" content="Access UAGC's comprehensive strategic intelligence suite: SEO audit for 40-60% growth, federal aid research, and reputation recovery. Transform enrollment challenges into sustainable growth.">
     
     <!-- Fonts & Icons -->
@@ -1434,7 +1436,11 @@
                 // Load additional resources when browser is idle
                 console.log('🚀 UAGC Strategic Intelligence Suite - Loaded');
             });
-        }
-    </script>
+            }
+</script>
+
+<!-- COMPLETE GITHUB PAGES REFRESH: December 27, 2024 -->
+<!-- Four Pillars Framework: SEO + Federal Aid + Reputation + User Experience -->
+<!-- Intensified Hero Animations: Deployed and Ready -->
 </body>
 </html> 
