Fix path for UAGC-cookie-personalization.html to correct cookie/ directory

--- a/index.html
+++ b/index.html
@@ -1118,7 +1118,7 @@
                             </div>
                         </div>
 
-                        <button onclick="openDocument('user experience - personalization /UAGC-cookie-personalization.html')" class="card-button" style="background: linear-gradient(135deg, var(--highlight-orange), var(--arizona-red)); color: white;">
+                        <button onclick="openDocument('cookie/UAGC-cookie-personalization.html')" class="card-button" style="background: linear-gradient(135deg, var(--highlight-orange), var(--arizona-red)); color: white;">
                             <i class="fas fa-cogs"></i> View UX Framework
                         </button>
                     </div>
