Add bidirectional links between SEO audit and one-pager, enhance content details with format and audience info

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             bottom: 0;
             background: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 1000"><defs><pattern id="grid" width="50" height="50" patternUnits="userSpaceOnUse"><path d="M 50 0 L 0 0 0 50" fill="none" stroke="rgba(255,255,255,0.1)" stroke-width="1"/></pattern></defs><rect width="100%" height="100%" fill="url(%23grid)"/></svg>');
             opacity: 0.3;
-            animation: gridFloat 20s linear infinite;
+            animation: gridFloat 12s linear infinite;
         }
 
         @keyframes gridFloat {
@@ -353,6 +353,18 @@
         .hero-content {
             text-align: center;
             color: white;
+            animation: heroContentFadeIn 1.2s ease-out forwards;
+        }
+
+        @keyframes heroContentFadeIn {
+            0% {
+                opacity: 0;
+                transform: translateY(40px);
+            }
+            100% {
+                opacity: 1;
+                transform: translateY(0);
+            }
         }
 
         .hero-badge {
@@ -369,6 +381,18 @@
             border: 1px solid rgba(255, 255, 255, 0.3);
             transition: transform 0.1s ease-out;
             cursor: pointer;
+            animation: slideInDown 0.8s ease-out 0.2s both;
+        }
+
+        @keyframes slideInDown {
+            0% {
+                opacity: 0;
+                transform: translateY(-30px) scale(0.9);
+            }
+            100% {
+                opacity: 1;
+                transform: translateY(0) scale(1);
+            }
         }
 
         .hero-badge:hover {
@@ -385,6 +409,20 @@
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             background-clip: text;
+            animation: titleReveal 1.0s ease-out 0.5s both;
+        }
+
+        @keyframes titleReveal {
+            0% {
+                opacity: 0;
+                transform: translateY(20px) scale(0.95);
+                filter: blur(2px);
+            }
+            100% {
+                opacity: 1;
+                transform: translateY(0) scale(1);
+                filter: blur(0px);
+            }
         }
 
         .hero-subtitle {
@@ -395,6 +433,7 @@
             margin-left: auto;
             margin-right: auto;
             font-weight: 400;
+            animation: fadeInUp 1.0s ease-out 0.8s both;
         }
 
         .hero-stats {
@@ -402,6 +441,7 @@
             grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
             gap: 2rem;
             margin-bottom: 3rem;
+            animation: fadeInUp 1.0s ease-out 1.1s both;
         }
 
         .stat-card {
@@ -411,6 +451,29 @@
             border-radius: var(--radius-lg);
             border: 1px solid rgba(255, 255, 255, 0.2);
             transition: var(--transition);
+        }
+
+        .stat-card:nth-child(1) {
+            animation: cardSlideIn 0.8s ease-out 1.3s both;
+        }
+
+        .stat-card:nth-child(2) {
+            animation: cardSlideIn 0.8s ease-out 1.5s both;
+        }
+
+        .stat-card:nth-child(3) {
+            animation: cardSlideIn 0.8s ease-out 1.7s both;
+        }
+
+        @keyframes cardSlideIn {
+            0% {
+                opacity: 0;
+                transform: translateY(30px) scale(0.9);
+            }
+            100% {
+                opacity: 1;
+                transform: translateY(0) scale(1);
+            }
         }
 
         .stat-card:hover {
@@ -1291,7 +1354,7 @@
                 this.container = document.getElementById(containerId);
                 this.particles = [];
                 this.isRunning = false;
-                this.maxParticles = 80; // More stars for space effect
+                this.maxParticles = 40; // Optimized particle count for performance
                 this.particleTypes = ['small', 'medium', 'large', 'glow', 'star-shape', 'galaxy'];
                 this.movementTypes = ['normal', 'diagonal', 'zigzag'];
                 
