--- a/seo-cro-audit-uagc.html
+++ b/seo-cro-audit-uagc.html
@@ -2680,6 +2680,21 @@
             <div class="section-header">
                 <h2 class="display-5">📝 Part 4: Content Strategy</h2>
                 <p class="text-muted">Content plan and implementation steps (detailed metrics in Part 5)</p>
+                
+                <!-- Link to Priority List One-Pager -->
+                <div class="alert alert-info border-0 p-3 mt-3 mb-3">
+                    <div class="d-flex align-items-center justify-content-between">
+                        <div>
+                            <i class="fas fa-list-ul me-2"></i>
+                            <strong>Quick Reference:</strong> View the simplified content priority list for your team
+                        </div>
+                        <a href="UAGC-Content-Strategy-Priority-List.html" class="btn btn-outline-primary btn-sm" target="_blank">
+                            <i class="fas fa-external-link-alt me-1"></i>
+                            View Priority List One-Pager
+                        </a>
+                    </div>
+                </div>
+                
                 <div class="alert alert-primary border-0 p-3 mt-3">
                     <small>
                         <i class="fas fa-rocket me-1"></i>
