Simplify navigation menu: Remove non-existent Metrics link, streamline brand name, and focus on 3 core customer journey stages

--- a/UAGC-Content-Strategy-Priority-List.html
+++ b/UAGC-Content-Strategy-Priority-List.html
@@ -472,7 +472,7 @@
     <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <i class="fas fa-rocket me-2"></i>UAGC Content Priorities
+                <i class="fas fa-list-check me-2"></i>Content Strategy
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
@@ -487,9 +487,6 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#decision">Decision</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#metrics">Metrics</a>
                     </li>
                 </ul>
             </div>
