Add credible UAGC source links for workforce alignment claim: Include professional development initiatives and Revature partnership

--- a/UAGC-Content-Strategy-Priority-List.html
+++ b/UAGC-Content-Strategy-Priority-List.html
@@ -733,7 +733,7 @@
                                 </div>
                                 <div class="detail-item">
                                     <span class="detail-label">Why it Works:</span>
-                                    <span class="detail-value">Connects UAGC programs to future workforce needs</span>
+                                    <span class="detail-value">Connects UAGC programs to future workforce needs via <a href="https://www.uagc.edu/about/media-room/press-releases/uagc-launches-summer-learning-professional-development-series" target="_blank" class="text-decoration-none">professional development initiatives</a> and <a href="https://www.uagc.edu/about/media-room/press-releases/tech-talent-high-demand-university-arizona-global-campus-and" target="_blank" class="text-decoration-none">industry partnerships</a></span>
                                 </div>
                                 <div class="detail-item">
                                     <span class="detail-label">Target Keywords:</span>
